--- a/index.html
+++ b/index.html
@@ -15,7 +15,29 @@
     <link rel="stylesheet" href="style.css" />
   </head>
   <body>
-    
+    <nav class="navbar navbar-dark">
+      <a class="navbar-brand" href="#">View Highscores</a>
+      <span id="timer">Time: </span>
+    </nav>
+    <div class="container">
+      <div class="card text-center">
+        <h5 class="card-header">Question #</h5>
+        <div class="card-body">
+          <h5 class="card-title">Question Content</h5>
+          <a href="#" class="btn btn-primary">Choice 1</a>
+          <a href="#" class="btn btn-primary">Choice 2</a>
+          <a href="#" class="btn btn-primary">Choice 3</a>
+          <a href="#" class="btn btn-primary">Choice 4</a>
+        </div>
+        <div class="card-footer text-muted">
+          CORRECT!!!
+        </div>
+        <div class="card-footer text-muted">
+            WRONG!!!
+          </div>
+      </div>
+    </div>
+
     <script
       src="https://code.jquery.com/jquery-3.4.1.slim.min.js"
       integrity="sha384-J6qa4849blE2+poT4WnyKhv5vZF5SrPo0iEjwBvKU7imGFAV0wwj1yYfoRSJoZ+n"
