--- a/index.html
+++ b/index.html
@@ -20,7 +20,7 @@
       <span id="timer">Time: </span>
     </nav>
     <div class="container">
-      <div class="card mx-auto text-center" class="hide">
+      <div id = "question-box"class="card mx-auto text-center collapse">
         <h5 id="questionTitle" class="card-header">Question:</h5>
         <div id ="choices" class="card-body">
           <h5 id="questionContent" class="card-title">Question Content</h5>
@@ -29,10 +29,10 @@
           <button class="btn btn-primary">Choice 3</button>
           <button class="btn btn-primary">Choice 4</button>
         </div>
-        <div class="card-footer text-muted">
+        <div id="correct" class="card-footer text-muted">
           CORRECT!!!
         </div>
-        <div class="card-footer text-muted">
+        <div id="wrong" class="card-footer text-muted">
             WRONG!!!
           </div>
       </div>
