win screen added, all questions working, timer now stops when game is won

--- a/index.html
+++ b/index.html
@@ -56,8 +56,13 @@
     </div>
     <div id="game-over" class="card mx-auto text-center collapse">
       <h5>TIMES UP!!!</h5>
-      <p>Thanks for playing :) Your score was a measely <span id="total-score"></span></p>
+      <p>Thanks for playing :)</p>
       <button id="reset" class="btn btn-dark">Try Again</button>
+    </div>
+    <div id="win-screen" class="card mx-auto text-center collapse">
+      <h5>YOU WIN!!!</h5>
+      <p>Did you learn anything? Enter your initials into the high score list</p>
+      <button id="reset" class="btn btn-success">Play Again</button>
     </div>
 
     <script
